# SimpleRokuApp

./: .gitignore  CLAUDE.md  README.md  build.py  deploy.py  manifest  pyproject.toml
components/: FetchFilesTask.xml  FileListItem.brs  FileListItem.xml  SimpleVideoScene.brs  SimpleVideoScene.xml
source/: config.brs
